--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ nav a:hover {
     align-items: center;      /* center content */
     text-align: center;       /* optional: center text */
   }
-  
+
   .intro .about {
     margin-top: 16px;         /* add space under the photo */
   }
@@ -159,7 +159,7 @@ a:active {
 }
 
 .research-page .container {
-  width: 95%;
+  width: 90%; /* 90 should look well */
   max-width: 1400px;          /* wider layout */
   margin: 10px auto;
   padding: 0 12px;
